--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -3,4 +3,5 @@ build-std = ["core", "compiler_builtins"]
 build-std-features = ["compiler-builtins-mem"]
 
 [build]
-target = "tools/x86_64-bruh_os.json"
+target = "run/x86_64-bruh_os.json"
+jobs = 5
