--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,4 @@ edition = "2018"
 
 [dependencies]
 stivale = { git = "https://github.com/safinsingh/stivale-rs" }
+linux_console_font = { git = "https://github.com/safinsingh/linux_console_font" }
