custom font because its cool

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,5 @@ edition = "2018"
 
 [dependencies]
 stivale = { git = "https://github.com/safinsingh/stivale-rs" }
-linux_console_font = { git = "https://github.com/safinsingh/linux_console_font" }
+# linux_console_font = { git = "https://github.com/safinsingh/linux_console_font" }
+zap_font = { path = "./lib/zap_font" }
